--- a/rewordlist/Makefile
+++ b/rewordlist/Makefile
@@ -1,7 +1,7 @@
 CC = g++ -Wall -ansi -g
 
 all:
-	$(CC) rewordlist.cpp words2.cpp ../reword/words.cpp ../reword/random.cpp ../reword/utils.cpp tinyxml/tinystr.cpp tinyxml/tinyxmlerror.cpp tinyxml/tinyxmlparser.cpp tinyxml/tinyxml.cpp -o rewordlist 
+	$(CC) rewordlist.cpp words2.cpp ../reword/words.cpp ../reword/random.cpp ../reword/helpers.cpp tinyxml/tinystr.cpp tinyxml/tinyxmlerror.cpp tinyxml/tinyxmlparser.cpp tinyxml/tinyxml.cpp -o rewordlist
 
 clean:
 	@echo Cleaning up...
