--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -50,6 +50,8 @@
 		<Unit filename="gamedata.cpp" />
 		<Unit filename="gamedata.h" />
 		<Unit filename="global.h" />
+		<Unit filename="helpers.cpp" />
+		<Unit filename="helpers.h" />
 		<Unit filename="image.cpp" />
 		<Unit filename="image.h" />
 		<Unit filename="imageanim.cpp" />
@@ -102,6 +104,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
