latest update with 6,7,8 letter games
Improved game screen look and play
Added touch screen icons in game for music & menu

--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -11,9 +11,11 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-nosound" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DDEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
