--- a/rewordlist/rewordlist.cbp
+++ b/rewordlist/rewordlist.cbp
@@ -11,10 +11,13 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="enable1.txt dict_webster.xdxf" />
+				<Option parameters="./bin/Debug/test.dict.xdxf -s" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="/usr/lib/libboost_thread.so" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/rewordlist" prefix_auto="1" extension_auto="1" />
@@ -32,6 +35,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Linker>
+			<Add library="libboost_regex" />
+		</Linker>
 		<Unit filename="../reword/helpers.cpp" />
 		<Unit filename="../reword/helpers.h" />
 		<Unit filename="../reword/random.cpp" />
