--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -12,6 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
+				<Option parameters="-nosound" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
