--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -14,10 +14,15 @@
 				<Option use_console_runner="0" />
 				<Option parameters="-nosound" />
 				<Compiler>
+					<Add option="-Wextra" />
+					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
 					<Add option="-DDEBUG" />
 				</Compiler>
+				<Linker>
+					<Add library="/usr/lib/libboost_filesystem.so" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/reword" prefix_auto="1" extension_auto="1" />
@@ -89,8 +94,12 @@
 		<Unit filename="playmenu.h" />
 		<Unit filename="playmodemenu.cpp" />
 		<Unit filename="playmodemenu.h" />
+		<Unit filename="playoptions.cpp" />
+		<Unit filename="playoptions.h" />
 		<Unit filename="random.cpp" />
 		<Unit filename="random.h" />
+		<Unit filename="resource.cpp" />
+		<Unit filename="resource.h" />
 		<Unit filename="reword.cpp" />
 		<Unit filename="roundels.cpp" />
 		<Unit filename="roundels.h" />
