--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -12,7 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
-				<Option parameters="-nosound" />
+				<Option parameters="-nosoundXXXX" />
 				<Compiler>
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
