--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -22,6 +22,7 @@
 				</Compiler>
 				<Linker>
 					<Add library="/usr/lib/libboost_filesystem.so" />
+					<Add library="/usr/lib/libboost_system.so" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -34,6 +35,8 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="/usr/lib/libboost_filesystem.so" />
+					<Add library="/usr/lib/libboost_system.so" />
 				</Linker>
 			</Target>
 		</Build>
@@ -50,6 +53,7 @@
 		<Unit filename="control.h" />
 		<Unit filename="controls.cpp" />
 		<Unit filename="controls.h" />
+		<Unit filename="delegate.h" />
 		<Unit filename="error.cpp" />
 		<Unit filename="error.h" />
 		<Unit filename="fontttf.cpp" />
@@ -107,6 +111,7 @@
 		<Unit filename="score.h" />
 		<Unit filename="screen.cpp" />
 		<Unit filename="screen.h" />
+		<Unit filename="signal.h" />
 		<Unit filename="singleton.cpp" />
 		<Unit filename="singleton.h" />
 		<Unit filename="sprite.cpp" />
