Make menu kbd interface consistent and fix warnings

--- a/reword/reword.cbp
+++ b/reword/reword.cbp
@@ -14,6 +14,14 @@
 				<Option use_console_runner="0" />
 				<Option parameters="-nosoundXXXX" />
 				<Compiler>
+					<Add option="-Wshadow" />
+					<Add option="-Winit-self" />
+					<Add option="-Wredundant-decls" />
+					<Add option="-Wfloat-equal" />
+					<Add option="-Winline" />
+					<Add option="-Wunreachable-code" />
+					<Add option="-Wswitch-default" />
+					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-Wall" />
 					<Add option="-g" />
